--- a/html_css_testing/MainPageCss.css
+++ b/html_css_testing/MainPageCss.css
@@ -3,11 +3,16 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #f0f4f8;
     font-family: 'Roboto', sans-serif;
+    overflow-y: auto;
+}
+
+.scrollable-container {
+    padding: 20px;
+    max-width: 1400px;
+    margin: 0 auto;
+    margin-top: 100px;
 }
 
 .container {
@@ -16,24 +21,28 @@ html {
     margin-bottom: 20px;
 }
 
-.container-left, .container-right, .container-center {
+.container-left,
+.container-right,
+.container-center {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.container-left-block, .container-right-block {
+.container-left-block,
+.container-right-block {
     padding: 15px 20px;
     background-color: #ffffff;
     border-radius: 16px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-size: 1rem;
     color: #333;
-    max-width: 500px;
+    max-width: 100%;
     transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 
-.container-left-block:hover, .container-right-block:hover {
+.container-left-block:hover,
+.container-right-block:hover {
     transform: scale(1.05);
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
 }
@@ -64,7 +73,6 @@ html {
 
 #contentTable {
     width: 100%;
-    max-width: 1000px;
     margin: 0 auto;
 }
 
